Made mobile flow more interactive

--- a/mobile/src/main/res/layout/activity_timer.xml
+++ b/mobile/src/main/res/layout/activity_timer.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="com.example.chen.presentationproject.preziHub">
+    tools:context="com.example.chen.presentationproject.timer">
 
-    <include layout="@layout/content_prezi_hub" />
+    <include layout="@layout/content_timer" />
 
 </android.support.design.widget.CoordinatorLayout>
