--- a/mobile/src/main/res/layout/activity_menu.xml
+++ b/mobile/src/main/res/layout/activity_menu.xml
@@ -11,8 +11,7 @@
         android:src="@drawable/menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:onClick="goToHub"/>
+        android:scaleType="fitXY" />
 
     <include layout="@layout/content_menu" />
 </android.support.design.widget.CoordinatorLayout>
