--- a/mobile/src/main/res/layout/activity_menu.xml
+++ b/mobile/src/main/res/layout/activity_menu.xml
@@ -2,13 +2,14 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/menu"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context=".MenuActivity">
 
     <ImageButton
         android:id="@+id/menuImage"
-        android:src="@drawable/menu"
+        android:alpha="0.0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
