--- a/mobile/src/main/res/layout/content_edit_prezi.xml
+++ b/mobile/src/main/res/layout/content_edit_prezi.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/editprezi"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_edit_prezi"
     tools:context="com.example.chen.presentationproject.EditPrezi">
 
     <ImageButton
         android:id="@+id/editPrezi"
-        android:src="@drawable/editprezi"
+        android:alpha="0.0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"/>
