--- a/mobile/src/main/res/layout/content_stats_prezi.xml
+++ b/mobile/src/main/res/layout/content_stats_prezi.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    android:background="@drawable/statspageone"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_stats_prezi"
@@ -9,7 +10,7 @@
 
     <ImageButton
         android:id="@+id/statspageone"
-        android:src="@drawable/statspageone"
+        android:alpha="0.0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"/>
