--- a/mobile/src/main/res/layout/content_timer.xml
+++ b/mobile/src/main/res/layout/content_timer.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/presentation_in_progress"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_prezi_hub"
     tools:context="com.example.chen.presentationproject.timer">
 
     <ImageButton
         android:id="@+id/preziHub"
-        android:src="@drawable/placeholder"
+        android:alpha="0.0"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"/>
