--- a/wear/src/main/res/layout/round_activity_watch_statistics.xml
+++ b/wear/src/main/res/layout/round_activity_watch_statistics.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context=".StartPresentationActivity"
-    tools:deviceIds="wear_round">
+    android:layout_height="match_parent"
+    tools:context="com.navroopsingh.spotlight.WatchStatisticsActivity" tools:deviceIds="wear_round">
 
     <TextView android:id="@+id/text" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_centerHorizontal="true"
